# SLib

./: .gitignore  .gitmodules  README.md  setup-path  setup-path.bat
examples/Audio/MicMon/: app.cpp  app.h
examples/Audio/Spectrogram/: app.cpp  app.h
examples/Base/ARC/: ARC.sln  ARC.vcxproj  CMakeLists.txt  Example-ARC.vcxproj
examples/Base/Containers/: CMakeLists.txt  Container.sln  Container.vcxproj  Example-Container.vcxproj  main.cpp
examples/Crypt/ChaCha20/: ChaCha20.sln  ChaCha20.vcxproj  ChaCha20.vcxproj.filters  main.cpp
examples/Database/LevelDB/: LevelDB.vcxproj  TestLevelDB.sln  TestLevelDB.vcxproj  main.cpp
examples/Database/MySQL/: main.cpp
examples/Database/PostgreSQL/: main.cpp
examples/Database/Redis/: main.cpp
examples/Database/Redis/Linux/: CMakeLists.txt
examples/Database/SQLite/: main.cpp
examples/Device/GetMachineSN/Linux/: CMakeLists.txt
examples/Graphics/DrawEllipse/: DrawEllipse.vcxproj
examples/Graphics/SvgViewer/: SvgViewer.vcxproj  app.cpp
examples/Math/FFT/: FFT.sln  FFT.vcxproj  main.cpp
examples/Network/AsyncTcp/: AsyncTcp.sln  TestAsyncTcp.sln  TestAsyncTcp.vcxproj  main.cpp
examples/Network/DomainSocket/: DomainSocket.sln  main.cpp
examples/Network/HttpServer/: CMakeLists.txt  Example-HttpServer.vcxproj  HttpServer.vcxproj  main.cpp
examples/Network/IPC/: .gitignore  CMakeLists.txt  IPC.sln  IPC.vcxproj  main.cpp
examples/Network/P2PMessenger/: app.cpp  app.h  main.cpp
examples/Network/PacketAnalyzer/: PacketAnalyzer.sln  PacketAnalyzer.vcxproj  main.cpp
examples/Network/Ping/: CMakeLists.txt  ExamplePing.sln  ExamplePing.vcxproj  Ping.sln  Ping.vcxproj  main.cpp
examples/Network/PseudoTcp/: PseudoTcp.sln  PseudoTcp.vcxproj  main.cpp
examples/Network/SimpleUdp/: SimpleUdp.sln  main.cpp
examples/Network/SocketEvent/: CMakeLists.txt  SocketEvent.sln  SocketEvent.vcxproj  TestSocketEvent.sln  TestSocketEvent.vcxproj  main.cpp
examples/Network/StaticWeb/: CMakeLists.txt  StaticWeb.sln  main.cpp
examples/Network/TAP/: main.cpp
examples/Network/UdpHolepuching/: CMakeLists.txt  main.cpp
examples/Network/UdpHolepuching/UdpHolepunching.xcodeproj/: project.pbxproj
examples/Project/Android/: settings.gradle
examples/Project/Linux/: CMakeLists.txt
examples/Project/Win32/: Examples.sln
examples/Render/Triangle/: app.cpp  app.h
examples/UI/CameraView/Linux/: CMakeLists.txt  main.cpp
examples/UI/GlobalEventMonitor/: GrabEvents.sln  GrabEvents.vcxproj  main.cpp
examples/UI/ImageView/Linux/: CMakeLists.txt  main.cpp
examples/UI/PdfView/: PdfViewer.sln  PdfViewer.vcxproj  app.cpp  app.h  main.cpp
examples/UI/QRCode/Android/app/: CMakeLists.txt
examples/UI/QRCode/Android/app/src/main/cpp/: native-lib.cpp
examples/android/JNI/: settings.gradle
examples/audio/MicMon/: app.cpp  app.h
examples/audio/RecordMic/: RecordMic.sln  main.cpp
examples/audio/Spectrogram/: app.cpp  app.h
examples/base/ARC/: .gitignore  main.cpp
examples/base/Containers/: main.cpp
examples/network/UdpHolepuching/: CMakeLists.txt
examples/ui/FFmpegPlayer/Android/app/: CMakeLists.txt
examples/ui/FFmpegPlayer/Android/app/src/main/cpp/: native-lib.cpp
examples/ui/ImageView/Linux/: CMakeLists.txt
extra/captcha/: captcha.cpp  captcha.h
extra/chat/: chat.cpp  chat.h  chat_client.cpp  chat_client.h  chat_resource.cpp  chat_sqlite.cpp  chat_view.cpp  chat_view.h
extra/data_store/: data_package.h  data_store.cpp  data_store.h
extra/dbip/: dbip.cpp  dbip.h
extra/file_encrypt/: chacha.cpp  chacha.h
extra/input_sender/: input_sender.cpp  input_sender.h
extra/keygen/: keygen.cpp  keygen.h
extra/log_package/: log_package.cpp  log_package.h
extra/p2p/: p2p.cpp  p2p.h
extra/packet_analyzer/: packet_analyzer.cpp  packet_analyzer.h
extra/pseudo_tcp/: pseudo_tcp.cpp  pseudo_tcp.h  pseudo_tcp_message.cpp  pseudo_tcp_message.h
extra/push_notification/: fcm.cpp  fcm.h  fcm_android.cpp  fcm_ios.mm  fcm_service.cpp  xgpush.cpp  xgpush.h  xgpush_android.cpp  xgpush_ios.mm  xgpush_service.cpp
extra/qrcode/: zxing.cpp  zxing.h  zxing_scanner.cpp  zxing_scanner.h
extra/security/: web_browser_monitor.h  web_browser_monitor_win32.cpp
extra/social/: alipay.cpp  alipay.h  alipay_android.cpp  alipay_ios.mm  alipay_openssl.cpp  alipay_sdk.cpp  ebay.cpp  ebay.h  etsy.cpp  etsy.h  etsy_ui.cpp  facebook.cpp  facebook.h  facebook_android.cpp  facebook_ios.mm  facebook_sdk.cpp  facebook_ui.cpp  instagram.cpp  instagram.h  instagram_android.cpp  instagram_ios.mm  linkedin.cpp  linkedin.h  linkedin_ui.cpp  paypal.cpp  paypal.h  paypal_ui.cpp  pinterest.cpp  pinterest.h  pinterest_ui.cpp  twitter.cpp  twitter.h  wechat.cpp  wechat.h  wechat_android.cpp  wechat_ios.mm  wechat_sdk.cpp
extra/web_service/: web_service.cpp  web_service.h
extra/winhook/: all.cpp  generate_array.bat  input_dll_file.cpp  input_dll_file.h  input_dll_x64.txt  input_dll_x86.txt  install_input.cpp  winhook.cpp  winhook.h
include/slib/: core.h  crypto.h  data.h  db.h  dev.h  develop.h  device.h  doc.h  graphics.h  io.h  math.h  media.h  network.h  object_types.h  platform.h  render.h  service.h  slib.h  storage.h  system.h  ui.h  uix.h
licenses/: kvazaar.txt
src/res/: sapp.xml
src/sapp/: sapp_document.cpp  sapp_document.h  sapp_document_color.cpp.h  sapp_document_color.inc  sapp_document_drawable.cpp.h  sapp_document_drawable.inc  sapp_document_layout.cpp.h  sapp_document_layout.inc  sapp_document_menu.cpp.h  sapp_document_menu.inc  sapp_document_raw.cpp.h  sapp_document_raw.inc  sapp_document_string.cpp.h  sapp_document_string.inc  sapp_error.inc.h  sapp_resources.cpp  sapp_resources.cpp.h  sapp_resources.h  sapp_util.cpp  sapp_util.h  sapp_values.cpp  sapp_values.cpp.h  sapp_values.h
test/doc/: check_pdf_file_is_encrypted.cpp  check_rar_file_is_encrypted.cpp
test/graphics/: draw_polygon.cpp  font_atlas.cpp  font_graphics_path.cpp  font_measure.cpp  freetype.cpp  freetype_atlas.cpp
test/network/: dhcp_server.cpp  http_server.cpp  smb_server.cpp
tool/: slib-app.cmake
tool/template/service/Linux/: CMakeLists.txt
(+2548 files in other folders)
